flapivor/tests/m3/hopix/typechecker/bad/79-if-then-else-04.hopix
val main : Int =
    if "String" then 0 else 1